--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "author": "LiquorLips",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
+    "akaneko": "^5.1.2",
     "discord.js": "^12.5.3",
     "emojis": "^1.0.10",
     "ffmpeg-static": "^4.4.0",
     "fs": "0.0.1-security",
     "google-translate-api": "^2.3.0",
     "iss": "0.0.2",
+    "node-fetch": "^2.6.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "tronalddump-io": "^1.0.1",
     "yt-search": "^2.8.0",
     "ytdl-core": "^4.8.2"
   }
+
 }
