--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
     "akaneko": "^5.1.2",
+    "discord-buttons": "^3.2.1",
     "discord.js": "^12.5.3",
     "emojis": "^1.0.10",
     "ffmpeg-static": "^4.4.0",
@@ -24,5 +25,4 @@
     "yt-search": "^2.8.0",
     "ytdl-core": "^4.8.2"
   }
-
 }
