--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "bot1.1.2",
-  "version": "1.1.2",
+  "name": "YBrelease1.1.3",
+  "version": "1.1.3",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "node ."
-  },
+  
   "author": "LiquorLips",
   "license": "ISC",
   "dependencies": {
