--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.3",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   
   "author": "LiquorLips",
   "license": "ISC",
